# lk-aic-comparator

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build_local_ai_coustics_package.sh
src/lk_aic_comparator/: cli.py
